--- a/index.html
+++ b/index.html
@@ -4,10 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Document</title>
     <style></style>
 </head>
-<body>
+<body class="wrapper">
     <h1>Hello World!!!</h1>
-</body>
+     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Est, voluptas delectus! Expedita, quaerat! Sunt voluptatum velit excepturi, voluptates maxime vero eligendi cum autem quis non atque consequuntur sequi, dolor delectus.</p>
+    <img class="full-bleed" src="https://i.picsum.photos/id/449/200/300.jpg?hmac=AswURfv1K7eMpuBVd_fnQVIDJrSBQeNmhwj13ofwljM" alt="img">
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Officia, nam. Expedita blanditiis quo ducimus tenetur totam iure modi reiciendis, laboriosam nesciunt eum, hic nulla, iusto ullam accusantium saepe omnis similique!</p>
+    </body>
+
 </html>
