--- a/index.html
+++ b/index.html
@@ -1,13 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Document</title>
     <style></style>
 </head>
-<body>
+
+<body class="wrapper">
     <h1>Hello World!!!</h1>
+    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Totam inventore fugit, numquam nulla perspiciatis eius
+        dolore labore eaque. Atque nemo libero qui quam, ducimus sequi obcaecati neque saepe esse iusto!</p>
+
+    <img class="full-bleed" src="https://i.picsum.photos/id/257/200/200.jpg?hmac=k0qf_n518If39xOB7qmdqgZZNQ38WdbfQXdF30TSPCw"
+        alt="picture">
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit dignissimos assumenda unde voluptatum facere
+        reprehenderit officiis rerum minus veritatis aperiam, iure, soluta earum qui atque! Magni minima deleniti
+        placeat unde.</p>
+
+
 </body>
+
+
 </html>
